proj 5/parser.output
Terminals which are not used

   FOR
   OROR
   ABS


Grammar

    0 $accept: Program $end

    1 Program: Proc Procs

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE Structure RIGHT_BRACE

    3 ParameterListOrNot: TypedParamList
    4                   | /* empty */

    5 TypedParamList: Paramlist COLON Primitive
    6               | Paramlist COLON Primitive SEMI_COLON TypedParamList

    7 Paramlist: Paramlist COMMA VARNAME
    8          | VARNAME

    9 Return: RET Expr SEMI_COLON

   10 Structure: Procs VarDecs Statements Return
   11          | Procs VarDecs Return

   12 Procs: Procs Proc
   13      | /* empty */

   14 VarDecs: VarDecs VarDec
   15        | /* empty */

   16 VarDec: VAR VAR_DEC_LHS COLON StringType SEMI_COLON

   17 VAR_DEC_LHS: VARNAME COMMA VAR_DEC_LHS
   18            | VARNAME

   19 Statements: Statements Statement
   20           | Statement

   21 Statement: VARNAME ArrayIndex EQ Expr SEMI_COLON
   22          | VARNAME EQ STRING SEMI_COLON
   23          | VARNAME EQ Expr SEMI_COLON
   24          | VARNAME EQ VARNAME LEFT_PAREN FuncCall RIGHT_PAREN SEMI_COLON
   25          | XOR VARNAME EQ VARNAME LEFT_PAREN FuncCall RIGHT_PAREN SEMI_COLON
   26          | XOR VARNAME EQ VARNAME LEFT_PAREN RIGHT_PAREN SEMI_COLON
   27          | VARNAME EQ VARNAME LEFT_PAREN RIGHT_PAREN SEMI_COLON
   28          | XOR VARNAME EQ Expr SEMI_COLON
   29          | IF_WHILE
   30          | CodeBlock

   31 FuncCall: Expr COMMA FuncCall
   32         | Expr

   33 IF_WHILE: IF LEFT_PAREN Expr RIGHT_PAREN CodeBlock ELSE CodeBlock
   34         | IF LEFT_PAREN Expr RIGHT_PAREN CodeBlock
   35         | WHILE LEFT_PAREN Expr RIGHT_PAREN CodeBlock

   36 CodeBlock: LEFT_BRACE VarDecs Statements RIGHT_BRACE
   37          | LEFT_BRACE RIGHT_BRACE

   38 StringType: Primitive
   39           | _STRING LEFT_BRACKET INT RIGHT_BRACKET

   40 Primitive: _INT
   41          | _CHAR
   42          | _CHARPTR
   43          | _INTPTR
   44          | _BOOL

   45 ArrayIndex: LEFT_BRACKET Expr RIGHT_BRACKET

   46 Expr: Value
   47     | Expr EQEQ Expr
   48     | Expr GT Expr
   49     | Expr LT Expr
   50     | Expr LTEQ Expr
   51     | Expr GTEQ Expr
   52     | Expr OR Expr
   53     | Expr NE Expr
   54     | Expr ANDAND Expr
   55     | Expr PLUS Expr
   56     | Expr MINUS Expr
   57     | Expr MULT Expr
   58     | Expr DIV Expr
   59     | PIPE Expr PIPE
   60     | XOR LEFT_PAREN Expr RIGHT_PAREN
   61     | NOT Expr
   62     | MINUS Expr
   63     | LEFT_PAREN Expr RIGHT_PAREN

   64 Value: VARNAME
   65      | AND VARNAME ArrayIndex
   66      | AND VARNAME
   67      | INT
   68      | CHAR
   69      | TRUE
   70      | FALSE
   71      | NULLTOKEN
   72      | XOR VARNAME
   73      | VARNAME LEFT_BRACKET Expr RIGHT_BRACKET


Terminals, with rules where they appear

$end (0) 0
error (256)
PROCEDURE (258) 2
ELSE (259) 33
IF (260) 33 34
FOR (261)
VAR (262) 16
RET (263) 2 9
WHILE (264) 35
EQEQ (265) 47
GT (266) 48
GTEQ (267) 51
LT (268) 49
LTEQ (269) 50
NE (270) 53
ANDAND (271) 54
OROR (272)
NOT (273) 61
PLUS (274) 55
MINUS (275) 56 62
MULT (276) 57
DIV (277) 58
AND (278) 65 66
XOR (279) 25 26 28 60 72
OR (280) 52
PIPE (281) 59
_INTPTR (282) 43
_CHARPTR (283) 42
_BOOL (284) 44
_INT (285) 40
_CHAR (286) 41
_STRING (287) 39
TRUE (288) 69
FALSE (289) 70
NULLTOKEN (290) 71
VARNAME (291) 2 7 8 17 18 21 22 23 24 25 26 27 28 64 65 66 72 73
INT (292) 39 67
CHAR (293) 68
STRING (294) 22
SEMI_COLON (295) 6 9 16 21 22 23 24 25 26 27 28
COLON (296) 5 6 16
COMMA (297) 7 17 31
ABS (298)
LEFT_BRACE (299) 2 36 37
RIGHT_BRACE (300) 2 36 37
LEFT_PAREN (301) 2 24 25 26 27 33 34 35 60 63
RIGHT_PAREN (302) 2 24 25 26 27 33 34 35 60 63
LEFT_BRACKET (303) 39 45 73
RIGHT_BRACKET (304) 39 45 73
EQ (305) 21 22 23 24 25 26 27 28


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
Program (52)
    on left: 1, on right: 0
Proc (53)
    on left: 2, on right: 1 12
ParameterListOrNot (54)
    on left: 3 4, on right: 2
TypedParamList (55)
    on left: 5 6, on right: 3 6
Paramlist (56)
    on left: 7 8, on right: 5 6 7
Return (57)
    on left: 9, on right: 10 11
Structure (58)
    on left: 10 11, on right: 2
Procs (59)
    on left: 12 13, on right: 1 10 11 12
VarDecs (60)
    on left: 14 15, on right: 10 11 14 36
VarDec (61)
    on left: 16, on right: 14
VAR_DEC_LHS (62)
    on left: 17 18, on right: 16 17
Statements (63)
    on left: 19 20, on right: 10 19 36
Statement (64)
    on left: 21 22 23 24 25 26 27 28 29 30, on right: 19 20
FuncCall (65)
    on left: 31 32, on right: 24 25 31
IF_WHILE (66)
    on left: 33 34 35, on right: 29
CodeBlock (67)
    on left: 36 37, on right: 30 33 34 35
StringType (68)
    on left: 38 39, on right: 16
Primitive (69)
    on left: 40 41 42 43 44, on right: 2 5 6 38
ArrayIndex (70)
    on left: 45, on right: 21 65
Expr (71)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
   , on right: 9 21 23 28 31 32 33 34 35 45 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 73
Value (72)
    on left: 64 65 66 67 68 69 70 71 72 73, on right: 46


state 0

    0 $accept: . Program $end

    PROCEDURE  shift, and go to state 1

    Program  go to state 2
    Proc     go to state 3


state 1

    2 Proc: PROCEDURE . VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE Structure RIGHT_BRACE

    VARNAME  shift, and go to state 4


state 2

    0 $accept: Program . $end

    $end  shift, and go to state 5


state 3

    1 Program: Proc . Procs

    $default  reduce using rule 13 (Procs)

    Procs  go to state 6


state 4

    2 Proc: PROCEDURE VARNAME . LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE Structure RIGHT_BRACE

    LEFT_PAREN  shift, and go to state 7


state 5

    0 $accept: Program $end .

    $default  accept


state 6

    1 Program: Proc Procs .
   12 Procs: Procs . Proc

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    Proc  go to state 8


state 7

    2 Proc: PROCEDURE VARNAME LEFT_PAREN . ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE Structure RIGHT_BRACE

    VARNAME  shift, and go to state 9

    $default  reduce using rule 4 (ParameterListOrNot)

    ParameterListOrNot  go to state 10
    TypedParamList      go to state 11
    Paramlist           go to state 12


state 8

   12 Procs: Procs Proc .

    $default  reduce using rule 12 (Procs)


state 9

    8 Paramlist: VARNAME .

    $default  reduce using rule 8 (Paramlist)


state 10

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot . RIGHT_PAREN RET Primitive LEFT_BRACE Structure RIGHT_BRACE

    RIGHT_PAREN  shift, and go to state 13


state 11

    3 ParameterListOrNot: TypedParamList .

    $default  reduce using rule 3 (ParameterListOrNot)


state 12

    5 TypedParamList: Paramlist . COLON Primitive
    6               | Paramlist . COLON Primitive SEMI_COLON TypedParamList
    7 Paramlist: Paramlist . COMMA VARNAME

    COLON  shift, and go to state 14
    COMMA  shift, and go to state 15


state 13

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN . RET Primitive LEFT_BRACE Structure RIGHT_BRACE

    RET  shift, and go to state 16


state 14

    5 TypedParamList: Paramlist COLON . Primitive
    6               | Paramlist COLON . Primitive SEMI_COLON TypedParamList

    _INTPTR   shift, and go to state 17
    _CHARPTR  shift, and go to state 18
    _BOOL     shift, and go to state 19
    _INT      shift, and go to state 20
    _CHAR     shift, and go to state 21

    Primitive  go to state 22


state 15

    7 Paramlist: Paramlist COMMA . VARNAME

    VARNAME  shift, and go to state 23


state 16

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET . Primitive LEFT_BRACE Structure RIGHT_BRACE

    _INTPTR   shift, and go to state 17
    _CHARPTR  shift, and go to state 18
    _BOOL     shift, and go to state 19
    _INT      shift, and go to state 20
    _CHAR     shift, and go to state 21

    Primitive  go to state 24


state 17

   43 Primitive: _INTPTR .

    $default  reduce using rule 43 (Primitive)


state 18

   42 Primitive: _CHARPTR .

    $default  reduce using rule 42 (Primitive)


state 19

   44 Primitive: _BOOL .

    $default  reduce using rule 44 (Primitive)


state 20

   40 Primitive: _INT .

    $default  reduce using rule 40 (Primitive)


state 21

   41 Primitive: _CHAR .

    $default  reduce using rule 41 (Primitive)


state 22

    5 TypedParamList: Paramlist COLON Primitive .
    6               | Paramlist COLON Primitive . SEMI_COLON TypedParamList

    SEMI_COLON  shift, and go to state 25

    $default  reduce using rule 5 (TypedParamList)


state 23

    7 Paramlist: Paramlist COMMA VARNAME .

    $default  reduce using rule 7 (Paramlist)


state 24

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive . LEFT_BRACE Structure RIGHT_BRACE

    LEFT_BRACE  shift, and go to state 26


state 25

    6 TypedParamList: Paramlist COLON Primitive SEMI_COLON . TypedParamList

    VARNAME  shift, and go to state 9

    TypedParamList  go to state 27
    Paramlist       go to state 12


state 26

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE . Structure RIGHT_BRACE

    $default  reduce using rule 13 (Procs)

    Structure  go to state 28
    Procs      go to state 29


state 27

    6 TypedParamList: Paramlist COLON Primitive SEMI_COLON TypedParamList .

    $default  reduce using rule 6 (TypedParamList)


state 28

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE Structure . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 30


state 29

   10 Structure: Procs . VarDecs Statements Return
   11          | Procs . VarDecs Return
   12 Procs: Procs . Proc

    PROCEDURE  shift, and go to state 1

    $default  reduce using rule 15 (VarDecs)

    Proc     go to state 8
    VarDecs  go to state 31


state 30

    2 Proc: PROCEDURE VARNAME LEFT_PAREN ParameterListOrNot RIGHT_PAREN RET Primitive LEFT_BRACE Structure RIGHT_BRACE .

    $default  reduce using rule 2 (Proc)


state 31

   10 Structure: Procs VarDecs . Statements Return
   11          | Procs VarDecs . Return
   14 VarDecs: VarDecs . VarDec

    IF          shift, and go to state 32
    VAR         shift, and go to state 33
    RET         shift, and go to state 34
    WHILE       shift, and go to state 35
    XOR         shift, and go to state 36
    VARNAME     shift, and go to state 37
    LEFT_BRACE  shift, and go to state 38

    Return      go to state 39
    VarDec      go to state 40
    Statements  go to state 41
    Statement   go to state 42
    IF_WHILE    go to state 43
    CodeBlock   go to state 44


state 32

   33 IF_WHILE: IF . LEFT_PAREN Expr RIGHT_PAREN CodeBlock ELSE CodeBlock
   34         | IF . LEFT_PAREN Expr RIGHT_PAREN CodeBlock

    LEFT_PAREN  shift, and go to state 45


state 33

   16 VarDec: VAR . VAR_DEC_LHS COLON StringType SEMI_COLON

    VARNAME  shift, and go to state 46

    VAR_DEC_LHS  go to state 47


state 34

    9 Return: RET . Expr SEMI_COLON

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 60
    Value  go to state 61


state 35

   35 IF_WHILE: WHILE . LEFT_PAREN Expr RIGHT_PAREN CodeBlock

    LEFT_PAREN  shift, and go to state 62


state 36

   25 Statement: XOR . VARNAME EQ VARNAME LEFT_PAREN FuncCall RIGHT_PAREN SEMI_COLON
   26          | XOR . VARNAME EQ VARNAME LEFT_PAREN RIGHT_PAREN SEMI_COLON
   28          | XOR . VARNAME EQ Expr SEMI_COLON

    VARNAME  shift, and go to state 63


state 37

   21 Statement: VARNAME . ArrayIndex EQ Expr SEMI_COLON
   22          | VARNAME . EQ STRING SEMI_COLON
   23          | VARNAME . EQ Expr SEMI_COLON
   24          | VARNAME . EQ VARNAME LEFT_PAREN FuncCall RIGHT_PAREN SEMI_COLON
   27          | VARNAME . EQ VARNAME LEFT_PAREN RIGHT_PAREN SEMI_COLON

    LEFT_BRACKET  shift, and go to state 64
    EQ            shift, and go to state 65

    ArrayIndex  go to state 66


state 38

   36 CodeBlock: LEFT_BRACE . VarDecs Statements RIGHT_BRACE
   37          | LEFT_BRACE . RIGHT_BRACE

    RIGHT_BRACE  shift, and go to state 67

    $default  reduce using rule 15 (VarDecs)

    VarDecs  go to state 68


state 39

   11 Structure: Procs VarDecs Return .

    $default  reduce using rule 11 (Structure)


state 40

   14 VarDecs: VarDecs VarDec .

    $default  reduce using rule 14 (VarDecs)


state 41

   10 Structure: Procs VarDecs Statements . Return
   19 Statements: Statements . Statement

    IF          shift, and go to state 32
    RET         shift, and go to state 34
    WHILE       shift, and go to state 35
    XOR         shift, and go to state 36
    VARNAME     shift, and go to state 37
    LEFT_BRACE  shift, and go to state 38

    Return     go to state 69
    Statement  go to state 70
    IF_WHILE   go to state 43
    CodeBlock  go to state 44


state 42

   20 Statements: Statement .

    $default  reduce using rule 20 (Statements)


state 43

   29 Statement: IF_WHILE .

    $default  reduce using rule 29 (Statement)


state 44

   30 Statement: CodeBlock .

    $default  reduce using rule 30 (Statement)


state 45

   33 IF_WHILE: IF LEFT_PAREN . Expr RIGHT_PAREN CodeBlock ELSE CodeBlock
   34         | IF LEFT_PAREN . Expr RIGHT_PAREN CodeBlock

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 71
    Value  go to state 61


state 46

   17 VAR_DEC_LHS: VARNAME . COMMA VAR_DEC_LHS
   18            | VARNAME .

    COMMA  shift, and go to state 72

    $default  reduce using rule 18 (VAR_DEC_LHS)


state 47

   16 VarDec: VAR VAR_DEC_LHS . COLON StringType SEMI_COLON

    COLON  shift, and go to state 73


state 48

   61 Expr: NOT . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 74
    Value  go to state 61


state 49

   62 Expr: MINUS . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 75
    Value  go to state 61


state 50

   65 Value: AND . VARNAME ArrayIndex
   66      | AND . VARNAME

    VARNAME  shift, and go to state 76


state 51

   60 Expr: XOR . LEFT_PAREN Expr RIGHT_PAREN
   72 Value: XOR . VARNAME

    VARNAME     shift, and go to state 77
    LEFT_PAREN  shift, and go to state 78


state 52

   59 Expr: PIPE . Expr PIPE

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 79
    Value  go to state 61


state 53

   69 Value: TRUE .

    $default  reduce using rule 69 (Value)


state 54

   70 Value: FALSE .

    $default  reduce using rule 70 (Value)


state 55

   71 Value: NULLTOKEN .

    $default  reduce using rule 71 (Value)


state 56

   64 Value: VARNAME .
   73      | VARNAME . LEFT_BRACKET Expr RIGHT_BRACKET

    LEFT_BRACKET  shift, and go to state 80

    $default  reduce using rule 64 (Value)


state 57

   67 Value: INT .

    $default  reduce using rule 67 (Value)


state 58

   68 Value: CHAR .

    $default  reduce using rule 68 (Value)


state 59

   63 Expr: LEFT_PAREN . Expr RIGHT_PAREN

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 81
    Value  go to state 61


state 60

    9 Return: RET Expr . SEMI_COLON
   47 Expr: Expr . EQEQ Expr
   48     | Expr . GT Expr
   49     | Expr . LT Expr
   50     | Expr . LTEQ Expr
   51     | Expr . GTEQ Expr
   52     | Expr . OR Expr
   53     | Expr . NE Expr
   54     | Expr . ANDAND Expr
   55     | Expr . PLUS Expr
   56     | Expr . MINUS Expr
   57     | Expr . MULT Expr
   58     | Expr . DIV Expr

    EQEQ        shift, and go to state 82
    GT          shift, and go to state 83
    GTEQ        shift, and go to state 84
    LT          shift, and go to state 85
    LTEQ        shift, and go to state 86
    NE          shift, and go to state 87
    ANDAND      shift, and go to state 88
    PLUS        shift, and go to state 89
    MINUS       shift, and go to state 90
    MULT        shift, and go to state 91
    DIV         shift, and go to state 92
    OR          shift, and go to state 93
    SEMI_COLON  shift, and go to state 94


state 61

   46 Expr: Value .

    $default  reduce using rule 46 (Expr)


state 62

   35 IF_WHILE: WHILE LEFT_PAREN . Expr RIGHT_PAREN CodeBlock

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 95
    Value  go to state 61


state 63

   25 Statement: XOR VARNAME . EQ VARNAME LEFT_PAREN FuncCall RIGHT_PAREN SEMI_COLON
   26          | XOR VARNAME . EQ VARNAME LEFT_PAREN RIGHT_PAREN SEMI_COLON
   28          | XOR VARNAME . EQ Expr SEMI_COLON

    EQ  shift, and go to state 96


state 64

   45 ArrayIndex: LEFT_BRACKET . Expr RIGHT_BRACKET

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 97
    Value  go to state 61


state 65

   22 Statement: VARNAME EQ . STRING SEMI_COLON
   23          | VARNAME EQ . Expr SEMI_COLON
   24          | VARNAME EQ . VARNAME LEFT_PAREN FuncCall RIGHT_PAREN SEMI_COLON
   27          | VARNAME EQ . VARNAME LEFT_PAREN RIGHT_PAREN SEMI_COLON

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 98
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    STRING      shift, and go to state 99
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 100
    Value  go to state 61


state 66

   21 Statement: VARNAME ArrayIndex . EQ Expr SEMI_COLON

    EQ  shift, and go to state 101


state 67

   37 CodeBlock: LEFT_BRACE RIGHT_BRACE .

    $default  reduce using rule 37 (CodeBlock)


state 68

   14 VarDecs: VarDecs . VarDec
   36 CodeBlock: LEFT_BRACE VarDecs . Statements RIGHT_BRACE

    IF          shift, and go to state 32
    VAR         shift, and go to state 33
    WHILE       shift, and go to state 35
    XOR         shift, and go to state 36
    VARNAME     shift, and go to state 37
    LEFT_BRACE  shift, and go to state 38

    VarDec      go to state 40
    Statements  go to state 102
    Statement   go to state 42
    IF_WHILE    go to state 43
    CodeBlock   go to state 44


state 69

   10 Structure: Procs VarDecs Statements Return .

    $default  reduce using rule 10 (Structure)


state 70

   19 Statements: Statements Statement .

    $default  reduce using rule 19 (Statements)


state 71

   33 IF_WHILE: IF LEFT_PAREN Expr . RIGHT_PAREN CodeBlock ELSE CodeBlock
   34         | IF LEFT_PAREN Expr . RIGHT_PAREN CodeBlock
   47 Expr: Expr . EQEQ Expr
   48     | Expr . GT Expr
   49     | Expr . LT Expr
   50     | Expr . LTEQ Expr
   51     | Expr . GTEQ Expr
   52     | Expr . OR Expr
   53     | Expr . NE Expr
   54     | Expr . ANDAND Expr
   55     | Expr . PLUS Expr
   56     | Expr . MINUS Expr
   57     | Expr . MULT Expr
   58     | Expr . DIV Expr

    EQEQ         shift, and go to state 82
    GT           shift, and go to state 83
    GTEQ         shift, and go to state 84
    LT           shift, and go to state 85
    LTEQ         shift, and go to state 86
    NE           shift, and go to state 87
    ANDAND       shift, and go to state 88
    PLUS         shift, and go to state 89
    MINUS        shift, and go to state 90
    MULT         shift, and go to state 91
    DIV          shift, and go to state 92
    OR           shift, and go to state 93
    RIGHT_PAREN  shift, and go to state 103


state 72

   17 VAR_DEC_LHS: VARNAME COMMA . VAR_DEC_LHS

    VARNAME  shift, and go to state 46

    VAR_DEC_LHS  go to state 104


state 73

   16 VarDec: VAR VAR_DEC_LHS COLON . StringType SEMI_COLON

    _INTPTR   shift, and go to state 17
    _CHARPTR  shift, and go to state 18
    _BOOL     shift, and go to state 19
    _INT      shift, and go to state 20
    _CHAR     shift, and go to state 21
    _STRING   shift, and go to state 105

    StringType  go to state 106
    Primitive   go to state 107


state 74

   47 Expr: Expr . EQEQ Expr
   48     | Expr . GT Expr
   49     | Expr . LT Expr
   50     | Expr . LTEQ Expr
   51     | Expr . GTEQ Expr
   52     | Expr . OR Expr
   53     | Expr . NE Expr
   54     | Expr . ANDAND Expr
   55     | Expr . PLUS Expr
   56     | Expr . MINUS Expr
   57     | Expr . MULT Expr
   58     | Expr . DIV Expr
   61     | NOT Expr .

    OR  shift, and go to state 93

    $default  reduce using rule 61 (Expr)


state 75

   47 Expr: Expr . EQEQ Expr
   48     | Expr . GT Expr
   49     | Expr . LT Expr
   50     | Expr . LTEQ Expr
   51     | Expr . GTEQ Expr
   52     | Expr . OR Expr
   53     | Expr . NE Expr
   54     | Expr . ANDAND Expr
   55     | Expr . PLUS Expr
   56     | Expr . MINUS Expr
   57     | Expr . MULT Expr
   58     | Expr . DIV Expr
   62     | MINUS Expr .

    MULT  shift, and go to state 91
    DIV   shift, and go to state 92
    OR    shift, and go to state 93

    $default  reduce using rule 62 (Expr)


state 76

   65 Value: AND VARNAME . ArrayIndex
   66      | AND VARNAME .

    LEFT_BRACKET  shift, and go to state 64

    $default  reduce using rule 66 (Value)

    ArrayIndex  go to state 108


state 77

   72 Value: XOR VARNAME .

    $default  reduce using rule 72 (Value)


state 78

   60 Expr: XOR LEFT_PAREN . Expr RIGHT_PAREN

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 109
    Value  go to state 61


state 79

   47 Expr: Expr . EQEQ Expr
   48     | Expr . GT Expr
   49     | Expr . LT Expr
   50     | Expr . LTEQ Expr
   51     | Expr . GTEQ Expr
   52     | Expr . OR Expr
   53     | Expr . NE Expr
   54     | Expr . ANDAND Expr
   55     | Expr . PLUS Expr
   56     | Expr . MINUS Expr
   57     | Expr . MULT Expr
   58     | Expr . DIV Expr
   59     | PIPE Expr . PIPE

    EQEQ    shift, and go to state 82
    GT      shift, and go to state 83
    GTEQ    shift, and go to state 84
    LT      shift, and go to state 85
    LTEQ    shift, and go to state 86
    NE      shift, and go to state 87
    ANDAND  shift, and go to state 88
    PLUS    shift, and go to state 89
    MINUS   shift, and go to state 90
    MULT    shift, and go to state 91
    DIV     shift, and go to state 92
    OR      shift, and go to state 93
    PIPE    shift, and go to state 110


state 80

   73 Value: VARNAME LEFT_BRACKET . Expr RIGHT_BRACKET

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 111
    Value  go to state 61


state 81

   47 Expr: Expr . EQEQ Expr
   48     | Expr . GT Expr
   49     | Expr . LT Expr
   50     | Expr . LTEQ Expr
   51     | Expr . GTEQ Expr
   52     | Expr . OR Expr
   53     | Expr . NE Expr
   54     | Expr . ANDAND Expr
   55     | Expr . PLUS Expr
   56     | Expr . MINUS Expr
   57     | Expr . MULT Expr
   58     | Expr . DIV Expr
   63     | LEFT_PAREN Expr . RIGHT_PAREN

    EQEQ         shift, and go to state 82
    GT           shift, and go to state 83
    GTEQ         shift, and go to state 84
    LT           shift, and go to state 85
    LTEQ         shift, and go to state 86
    NE           shift, and go to state 87
    ANDAND       shift, and go to state 88
    PLUS         shift, and go to state 89
    MINUS        shift, and go to state 90
    MULT         shift, and go to state 91
    DIV          shift, and go to state 92
    OR           shift, and go to state 93
    RIGHT_PAREN  shift, and go to state 112


state 82

   47 Expr: Expr EQEQ . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 113
    Value  go to state 61


state 83

   48 Expr: Expr GT . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 114
    Value  go to state 61


state 84

   51 Expr: Expr GTEQ . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 115
    Value  go to state 61


state 85

   49 Expr: Expr LT . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 116
    Value  go to state 61


state 86

   50 Expr: Expr LTEQ . Expr

    NOT         shift, and go to state 48
    MINUS       shift, and go to state 49
    AND         shift, and go to state 50
    XOR         shift, and go to state 51
    PIPE        shift, and go to state 52
    TRUE        shift, and go to state 53
    FALSE       shift, and go to state 54
    NULLTOKEN   shift, and go to state 55
    VARNAME     shift, and go to state 56
    INT         shift, and go to state 57
    CHAR        shift, and go to state 58
    LEFT_PAREN  shift, and go to state 59

    Expr   go to state 117
    Value  go to state 61


state 87

   53 Expr: Expr NE . Expr
